[REFACTOR] remove duplicate & unused code